// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the Home link selected 1`] = `
<div>
  <header
    class="flex h-20 flex-col justify-center bg-white backdrop-blur"v
  >
    <div
      class="mx-4 flex items-center justify-between md:container md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-sm font-medium text-blue-500"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:rc:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
          >
            Beta
          </div>
        </button>
      </div>
      <nav
        class="flex space-x-8 print:hidden"
      >
        <a
          class="text-sm hover:text-cyan-500 text-cyan-500"
          href="/"
        >
          Home
        </a>
        <a
          class="text-sm hover:text-cyan-500"
          href="/report"
        >
          Report Tool
        </a>
        <a
          class="text-sm hover:text-cyan-500"
          href="/hub"
        >
          Hub
        </a>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Header renders the Hub link selected 1`] = `
<div>
  <header
    class="flex h-20 flex-col justify-center bg-white backdrop-blur" 
  >
    <div
      class="mx-4 flex items-center justify-between md:container md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-sm font-medium text-blue-500"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:ri:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
          >
            Beta
          </div>
        </button>
      </div>
      <nav
        class="flex space-x-8 print:hidden"
      >
        <a
          class="text-sm hover:text-cyan-500"
          href="/"
        >
          Home
        </a>
        <a
          class="text-sm hover:text-cyan-500"
          href="/report"
        >
          Report Tool
        </a>
        <a
          class="text-sm hover:text-cyan-500 text-cyan-500"
          href="/hub"
        >
          Hub
        </a>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Header renders the Report Tool link selected 1`] = `
<div>
  <header
    class="flex h-20 flex-col justify-center bg-white backdrop-blur" 
  >
    <div
      class="mx-4 flex items-center justify-between md:container md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-sm font-medium text-blue-500"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:rf:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
          >
            Beta
          </div>
        </button>
      </div>
      <nav
        class="flex space-x-8 print:hidden"
      >
        <a
          class="text-sm hover:text-cyan-500"
          href="/"
        >
          Home
        </a>
        <a
          class="text-sm hover:text-cyan-500 text-cyan-500"
          href="/report"
        >
          Report Tool
        </a>
        <a
          class="text-sm hover:text-cyan-500"
          href="/hub"
        >
          Hub
        </a>
      </nav>
    </div>
  </header>
</div>
`;
